manifests/practiceexams-auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: practiceexams-auth
  labels:
    app: practiceexams-auth
